# OpCostAnlt

./: .gitignore  Makefile  README.md  pyproject.toml
config/: category_taxonomy.yaml  classification_rules.yaml  settings.example.toml  statuses.yaml
docs/: architecture.md  classification_methodology.md  qa_checklist.md  review_process.md
scripts/: analyze_uploaded_csv.py  build_dashboard.py  build_visual_demography.py  classic_ds_expense_workflow.py  run_pipeline.py
src/it_spend_dashboard/: __init__.py  cli.py
src/it_spend_dashboard/api/: __init__.py  app.py  repository.py
src/it_spend_dashboard/classification/: __init__.py  article_matcher.py  confidence.py  keyword_matcher.py  manual_labeling.py  pipeline.py  review_queue.py  rules_engine.py  taxonomy.py  vendor_matcher.py
src/it_spend_dashboard/cleaning/: __init__.py  amounts.py  dates.py  entities.py  pipeline.py  statuses.py  text.py
src/it_spend_dashboard/dashboard/: __init__.py  builder.py  context.py  html_builder.py  payload_builder.py
src/it_spend_dashboard/ingestion/: __init__.py  load_csv.py  normalize_columns.py  pipeline.py  schema.py
src/it_spend_dashboard/insights/: __init__.py  generators.py  narratives.py  pipeline.py
tests/: test_classification_taxonomy.py  test_cleaning.py  test_cli.py  test_dashboard_html.py  test_dashboard_payload.py  test_dashboard_payload_snapshot.py  test_dashboard_smoke.py  test_ingestion.py  test_insights.py  test_modeling.py  test_qa.py  test_review_queue.py  test_rules_engine.py  test_smoke.py
tests/snapshots/: dashboard_payload_snapshot.json
(+16 files in other folders)
